<resources>
    <string name="app_name">Calculator</string>
    <string name="text_area_nothing">0</string>
    <string name="error_text">Error</string>
    <string name="standard_mode">ST</string>
    <string name="scientific_mode">SC</string>
    <string name="clear_btn">C</string>
    <string name="back_btn">X</string>
    <string name="modulus_btn">%</string>
    <string name="divide_btn">÷</string>
    <string name="seven_btn">7</string>
    <string name="eight_btn">8</string>
    <string name="nine_btn">9</string>
    <string name="multiply_btn">*</string>
    <string name="four_btn">4</string>
    <string name="five_btn">5</string>
    <string name="six_btn">6</string>
    <string name="subtract_btn">-</string>
    <string name="one_btn">1</string>
    <string name="two_btn">2</string>
    <string name="three_btn">3</string>
    <string name="add_btn">+</string>
    <string name="zero_btn">0</string>
    <string name="decimal_point_btn">.</string>
    <string name="equal_btn">=</string>
    <string name="sin_btn">sin</string>
    <string name="cos_btn">cos</string>
    <string name="tan_btn">tan</string>
    <string name="sec_btn">sec</string>
    <string name="cosec_btn">cosec</string>
    <string name="cot_btn">cot</string>
    <string name="sqrt_btn">√</string>
    <string name="power_btn">^</string>
    <string name="pi_btn">π</string>
    <string name="log_btn">log</string>
    <string name="ln_btn">ln</string>
    <string name="factorial_btn">x!</string>
    <string name="open_parenthesis_btn">(</string>
    <string name="close_parenthesis_btn">)</string>
    <string name="exponent_btn">x^y</string>
    <string name="header">Calculator</string>
</resources>